@@ -1,0 +1,2 @@
+Wscript.StdOut.WriteLine "Broken :("
+WScript.Quit(2)
